k8s/prom/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: prom
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.rolancia.com"
  - port:
      number: 443
      name: grafana-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "grafana-cert"
    hosts:
    - "grafana.rolancia.com"
