k8s/prom/istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress
  namespace: prom
spec:
  hosts: 
  - 'grafana.rolancia.com'
  gateways:
  - gateway
  http:
  - route:
    - destination: 
        host: prometheus-grafana
